--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/konva": "^10.0.1",
+    "bezier-easing": "^2.1.0",
     "konva": "^9.3.20",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-konva": "^19.0.5",
+    "react-spring": "^10.0.1",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
