--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-konva": "^19.0.5",
+    "react-router-dom": "^7.6.2",
     "react-spring": "^10.0.1",
     "zustand": "^5.0.5"
   },
@@ -25,6 +26,7 @@
     "@types/fontkit": "^2.0.8",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.4.1",
     "base-64": "^1.0.0",
     "eslint": "^9.25.0",
