--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-spring/konva": "^10.0.1",
     "bezier-easing": "^2.1.0",
     "konva": "^9.3.20",
+    "nanoid": "^5.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-konva": "^19.0.5",
